Use uppercase names for file systems, fix spacing issues. (1126)

--- a/gui/media/css/custom.css
+++ b/gui/media/css/custom.css
@@ -1,8 +1,15 @@
 #rebootDialog_underlay { background-color:#000; }
 #shutdownDialog_underlay { background-color:#FD0000; }
 #top_dialog_underlay { background-color:#000; }
+table.srv tr,td{
+    padding:8px;
+}
+
 
 table.srv img{
+    cursor:pointer;
+}
+img.srv {
     cursor:pointer;
 }
 
